testdata/baselines/reference/submodule/compiler/destructuringUnspreadableIntoRest.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Omit'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
destructuringUnspreadableIntoRest.ts(23,15): error TS2339: Property 'publicProp' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(26,15): error TS2339: Property 'privateProp' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(28,15): error TS2339: Property 'privateProp' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(31,15): error TS2339: Property 'protectedProp' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(33,15): error TS2339: Property 'protectedProp' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(36,15): error TS2339: Property 'getter' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(38,15): error TS2339: Property 'getter' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(41,15): error TS2339: Property 'setter' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(43,15): error TS2339: Property 'setter' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(46,15): error TS2339: Property 'method' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(48,15): error TS2339: Property 'method' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(61,11): error TS2339: Property 'publicProp' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(64,11): error TS2339: Property 'privateProp' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(66,11): error TS2339: Property 'privateProp' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(69,11): error TS2339: Property 'protectedProp' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(71,11): error TS2339: Property 'protectedProp' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(74,11): error TS2339: Property 'getter' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(76,11): error TS2339: Property 'getter' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(79,11): error TS2339: Property 'setter' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(81,11): error TS2339: Property 'setter' does not exist on type '{}'.
destructuringUnspreadableIntoRest.ts(84,11): error TS2339: Property 'method' does not exist on type '{ publicProp: string; }'.
destructuringUnspreadableIntoRest.ts(86,11): error TS2339: Property 'method' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Omit'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== destructuringUnspreadableIntoRest.ts (22 errors) ====
    class A {
        constructor(
            public publicProp: string,
            private privateProp: string,
            protected protectedProp: string,
        ) {}
    
        get getter(): number {
            return 1;
        }
    
        set setter(_v: number) {}
    
        method() {
            const {                 ...rest1 } = this;
            const {                 ...rest2 } = this as A;
            const { publicProp: _1, ...rest3 } = this;
            const { publicProp: _2, ...rest4 } = this as A;
    
            rest1.publicProp;
            rest2.publicProp;
            rest3.publicProp;
            rest4.publicProp;
                  ~~~~~~~~~~
!!! error TS2339: Property 'publicProp' does not exist on type '{}'.
    
            rest1.privateProp;
            rest2.privateProp;
                  ~~~~~~~~~~~
!!! error TS2339: Property 'privateProp' does not exist on type '{ publicProp: string; }'.
            rest3.privateProp;
            rest4.privateProp;
                  ~~~~~~~~~~~
!!! error TS2339: Property 'privateProp' does not exist on type '{}'.
    
            rest1.protectedProp;
            rest2.protectedProp;
                  ~~~~~~~~~~~~~
!!! error TS2339: Property 'protectedProp' does not exist on type '{ publicProp: string; }'.
            rest3.protectedProp;
            rest4.protectedProp;
                  ~~~~~~~~~~~~~
!!! error TS2339: Property 'protectedProp' does not exist on type '{}'.
    
            rest1.getter;
            rest2.getter;
                  ~~~~~~
!!! error TS2339: Property 'getter' does not exist on type '{ publicProp: string; }'.
            rest3.getter;
            rest4.getter;
                  ~~~~~~
!!! error TS2339: Property 'getter' does not exist on type '{}'.
    
            rest1.setter;
            rest2.setter;
                  ~~~~~~
!!! error TS2339: Property 'setter' does not exist on type '{ publicProp: string; }'.
            rest3.setter;
            rest4.setter;
                  ~~~~~~
!!! error TS2339: Property 'setter' does not exist on type '{}'.
    
            rest1.method;
            rest2.method;
                  ~~~~~~
!!! error TS2339: Property 'method' does not exist on type '{ publicProp: string; }'.
            rest3.method;
            rest4.method;
                  ~~~~~~
!!! error TS2339: Property 'method' does not exist on type '{}'.
        }
    }
    
    function destructure<T extends A>(x: T) {
        const {                 ...rest1 } = x;
        const {                 ...rest2 } = x as A;
        const { publicProp: _1, ...rest3 } = x;
        const { publicProp: _2, ...rest4 } = x as A;
    
        rest1.publicProp;
        rest2.publicProp;
        rest3.publicProp;
        rest4.publicProp;
              ~~~~~~~~~~
!!! error TS2339: Property 'publicProp' does not exist on type '{}'.
    
        rest1.privateProp;
        rest2.privateProp;
              ~~~~~~~~~~~
!!! error TS2339: Property 'privateProp' does not exist on type '{ publicProp: string; }'.
        rest3.privateProp;
        rest4.privateProp;
              ~~~~~~~~~~~
!!! error TS2339: Property 'privateProp' does not exist on type '{}'.
    
        rest1.protectedProp;
        rest2.protectedProp;
              ~~~~~~~~~~~~~
!!! error TS2339: Property 'protectedProp' does not exist on type '{ publicProp: string; }'.
        rest3.protectedProp;
        rest4.protectedProp;
              ~~~~~~~~~~~~~
!!! error TS2339: Property 'protectedProp' does not exist on type '{}'.
    
        rest1.getter;
        rest2.getter;
              ~~~~~~
!!! error TS2339: Property 'getter' does not exist on type '{ publicProp: string; }'.
        rest3.getter;
        rest4.getter;
              ~~~~~~
!!! error TS2339: Property 'getter' does not exist on type '{}'.
    
        rest1.setter;
        rest2.setter;
              ~~~~~~
!!! error TS2339: Property 'setter' does not exist on type '{ publicProp: string; }'.
        rest3.setter;
        rest4.setter;
              ~~~~~~
!!! error TS2339: Property 'setter' does not exist on type '{}'.
    
        rest1.method;
        rest2.method;
              ~~~~~~
!!! error TS2339: Property 'method' does not exist on type '{ publicProp: string; }'.
        rest3.method;
        rest4.method;
              ~~~~~~
!!! error TS2339: Property 'method' does not exist on type '{}'.
    }
    